[tool.poetry]
name = "3crv-historical-data"
version = "0.1.0"
description = ""
authors = ["Alberto Cevallos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
black = "^23.3.0"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.1"
web3 = "^6.9.0"
maturin = "^1.2.3"
cryo-python = { file = "./cryo/target/wheels/cryo_python-0.2.0-cp310-cp310-macosx_10_7_x86_64.whl" }
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"